--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,36 @@
+
+  
+  body {
+    margin: 0;
+    padding: 0;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+      Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    background-color: #eff3f7;
+    height: 100%;
+  }
+
+  html, body, #root, .container{
+      height: 100%;
+  }
+
+  .loader {
+      width:100%;
+      height:100%;
+      display:flex;
+      justify-content: center;
+      align-items: center;
+
+  }
+/*
+* {
+    box-sizing: border-box;
+  }
 body{
+    padding: 50px;
     background-color: aquamarine;
 }
+.movies{
+    display: grid;
+    grid-template-columns: 750px 750px ;
+    grid-gap: 30px;
+}*/
