--- a/src/App.css
+++ b/src/App.css
@@ -2,16 +2,63 @@
 * {
     box-sizing: border-box;
   }
+  
+  
   body {
+    display:block;
     margin: 0;
     padding: 0;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
       Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-    background-color: #eff3f7;
+     background-color:#141414;
+    
     height: 100%;
+    
   }
 .movies{
     display: grid;
     grid-template-columns: 750px 750px ;
     grid-gap: 30px;
+    z-index: 5;
+     
 }
+img{
+  z-index:0;
+    width:100%;
+}
+.nav_{
+  color:crimson;
+  background-color: black;
+  background-image: linear-gradient(rgba(0,0,0,1), rgba(255,255,255,0));
+ 
+  vertical-align: middle;
+  width:100%;
+  min-height:80px;
+  overflow: auto;
+  padding:0px 4%;
+  
+}
+.nav_ .nav_con{
+ 
+  
+  margin-top: auto;
+}
+.nav_ .nav_icon{}
+.nav_ .nav_menu{
+  
+  
+  
+  color:aqua;
+}
+.nav_ .nav_menu .nav_menu_item{
+  
+  margin-left: 20px;
+}
+.nav_ .nav_menu a{
+  
+  line-height: 70px;
+  font-size:130%;
+  text-align: center;
+  color:red;
+}
+.nav_ .nav_left{}
